--- a/ar-vr.html
+++ b/ar-vr.html
@@ -35,7 +35,14 @@
 	    </nav>
 
 	    <main class="grid-item main">
-	    	<h1>Opdrachten</h1>
+	    	<h1>Introductie</h1>
+	    	<p>Augmented Reality (AR) en Virtual Reality (VR) worden steeds groter tegenwoordig. Iets wat begon als een leuk ‘spelletje’ is uitgelopen tot een wereld veranderende toevoeging van het leven. Augmented Reality houdt in dat er dingen toegevoegd worden aan de echte wereld, wat alleen te zien is via een AR bril, projecties of via het scherm van smartphone of een tablet. Virtual Reality is een manier waarop de echte wereld vervangen wordt door een gemaakte wereld, te zien via een VR bril. </p>
+
+	    	<h1>Opdracht</h1>
+	    	<p>Voor de opdracht van AR & VR bedenk ik een concept bij elk van de drie onderwerpen die ik gekozen heb. De onderwerpen zijn hieronder terug te vinden, samen met het concept, de werking ervan en een passende illustratie. </p>
+	    	<p></p>
+	    	<p></p>
+	    	<p></p>
 	    	<p></p>
 	    </main>
 
@@ -50,7 +57,7 @@
 	    </main>
 
 	    <footer class="grid-item foot">
-	    	<p>© 2019 HCI by Djenna Bakker</p>
+	    	<p>© 2019 HCI by <a href="https://djennabakker.myportfolio.com/" target="_blank" id="link-footer">Djenna Bakker</a></p>
 	    </footer>
 
 	  <script type="text/javascript" src="scripts/script.js"></script>
