--- a/arduino.html
+++ b/arduino.html
@@ -450,7 +450,7 @@ void loop() {
 	    </main>
 
 	    <footer class="grid-item foot">
-	    	<p>© 2019 HCI by Djenna Bakker</p>
+	    	<p>© 2019 HCI by <a href="https://djennabakker.myportfolio.com/" target="_blank" id="link-footer">Djenna Bakker</a></p>
 	    </footer>
 
 	  <script type="text/javascript" src="scripts/script.js"></script>
