--- a/index.html
+++ b/index.html
@@ -34,38 +34,17 @@
 			</ul>
 	    </nav>
 	    
-	    <!-- ----------TRYOUT-------------- -->
-	    <!-- <nav role="navigation">
-		  <ul>
-		    <li><a href="index.html">Home</a></li>
-		    <li><a href="opdrachten.html" aria-haspopup="true">Opdrachten</a>
-		      <ul class="dropdown" aria-label="submenu">
-		        <li><a href="wearables.html">Wearables</a></li>
-		        <li><a href="playfulinteractions.html">Playful interfaces</a></li>
-		        <li><a href="artificialcreatures.html">Artificial creatures</a></li>
-		        <li><a href="ar-vr.html">AR & VR</a></li>
-		      </ul>
-		    </li>
-		    <li><a href="workshops.html" aria-haspopup="true">Workshops</a>
-		      <ul class="dropdown" aria-label="submenu">
-		        <li><a href="arduino.html">Arduino</a></li>
-		        <li><a href="vr-environments.html">VR-environments</a></li>
-		        <li><a href="computervision.html">Computer vision</a></li>
-		      </ul>
-		    </li>
-		    <li><a href="excursion.html">Excursies</a></li>
-		    <li><a href="labweeks.html">Lab weken</a></li>
-		  </ul>
-		</nav> -->
-
 	    <main class="grid-item main" id="home">
 	    	<h1>Welkom!</h1>
 	    	<img src="images/djenna.png" class="djenna-foto" alt="foto-djenna">
 	    	<p>
-	    		Hallo! Ik ben Djenna Bakker en op dit moment zit ik in mijn tweede jaar van de opleiding Communicatie & Multimedia desing. Voor het vak HCI-technologie heb ik een portfolio gemaakt, waarin alle opdrachten, projecten, excursies en lab weken terug te lezen zijn. 	
+	    		Hallo! Ik ben Djenna Bakker en op dit moment zit ik in mijn tweede jaar van de opleiding Communicatie & Multimedia desing. Voor het vak HCI-technologie heb ik een portfolio gemaakt, waarin ik al mijn gemaakt opdrachten, projecten, excursies en lab weken laat zien.
 	    	</p>
 	    	<p>
-	    		Tijdens het vak HCI worden veel technieken behandeld die relevant en nieuw zijn. Over deze technieken heb ik wel het een en ander gehoord in mijn opleiding, maar ik heb nog geen kans gehad om er daadwerkelijk iets te doen of te maken. De verschillende technieken zijn bovenin in het menu te zien en worden behandeld en uitgelegd op de desbetreffende pagina. 
+	    		Tijdens het vak HCI worden veel technieken behandeld die relevant en nieuw voor mij zijn. Over deze technieken heb ik wel het een en ander gehoord in mijn opleiding, maar ik heb nog geen kans gehad om er daadwerkelijk iets te doen of te maken. Ik hoop dat ik tijdens het HCI vak deze technieken beter leer begrijpen en dat ik hier echt mee ga werken en mee kan oefenen. Hiermee hoop ik veel te leren en een beter beeld te krijgen van onderwerpen waar ik mogelijk meer over wil weten en later mee wil gaan werken. Ik ben iemand die visueel ingesteld is en veel beter leer als ik daadwerkelijk iets ermee kan maken, in plaats van er alleen maar over lezen en een aantal voorbeelden te bekijken. 
+	    	</p>
+	    	<p>
+	    		De verschillende technieken zijn bovenin in het menu te zien en worden behandeld en uitgelegd op de desbetreffende pagina. 
 	    	</p>
 
 	    	<!-- Home
@@ -77,7 +56,7 @@
 	    </main>
 
 	    <footer class="grid-item foot">
-	    	<p>© 2019 HCI by Djenna Bakker</p>
+	    	<p>© 2019 HCI by <a href="https://djennabakker.myportfolio.com/" target="_blank" id="link-footer">Djenna Bakker</a></p>
 	    </footer>
 
 	  <script type="text/javascript" src="scripts/script.js"></script>
