--- a/playfulinteractions.html
+++ b/playfulinteractions.html
@@ -35,22 +35,55 @@
 	    </nav>
 
 	    <main class="grid-item main">
-	    	<h1>Opdrachten</h1>
-	    	<p></p>
+	    	<h1>Opdracht</h1>
+	    	<h3>Introductie</h3>
+	    	<p>Om echt de aandacht te trekken bij mensen, zijn Playful Interfaces ideaal. Op deze manier worden hedendaagse dingen omgetoverd tot iets wat anders is, wat de aandacht trekt en wat voornamelijk leuk is om te gebruiken. Voor het onderwerp Playful Interfaces heb ik 3 opdrachten gemaakt, deze zijn hieronder te zien. </p>
+	    	
+	    	<h3>Concept</h3>
+	    	<p>Voor de eerste opdracht heb ik een nieuw concept bedacht, om sociale Playful Interfaces te gebruiken en positief gedrag te motiveren binnen de Haagse Hogeschool. Hiervoor heb ik een spel bedacht, waarmee studenten uit NL en het buitenland op een leuke manier elkaar leren kennen.</p>
+
+			<p>Het concept is een interactief museum in de school. Voordat de studenten het museum instappen, kiezen ze op een tablet wat voor museum hen interesseert en wat zij graag zouden willen zien. Aan de hand van de resultaten worden er groepen gemaakt binnen de studenten en elke groep mag een voor een het museum bezoeken. Het museum wordt dan door middel van projectoren ‘ingericht’ en kan dus veranderd worden per onderwerp. In het museum wordt informatie gegeven over het onderwerp, afbeeldingen en video’s weergegeven en worden er vragen gesteld. Deze vragen kunnen de studenten onderling aan elkaar vragen om elkaar zo beter te leren kennen. De grootte van het museum bepaalt wat er allemaal weergegeven kan worden. Het museum is een ruimte van vier muren waarop de inrichting geprojecteerd wordt op de muren.</p>
+
+			<p>Het museum ‘spel’ kan dan zowel individueel of in groepsvorm uitgevoerd worden. Uiteindelijk past het museum bij de interesses van de studenten die op dat moment aanwezig zijn, en daarop zijn de mogelijke aanpassingen dan ook gericht. Dus wat er in het museum gebeurt en gespeelt wordt kan zowel coöperatief als competitief zijn, het hoofddoel van het museum is dat de studenten coöperatief bezig zijn. Maar in het museum zijn er spellen die zowel coöperatief als competitief zijn. De spellen kunnen zowel parallel als onderling afhankelijk zijn en kunnen dan vergelijkende, kopiërende en/of gedeelde ruimte bevatten als functie. Door het mogelijk ruimtegebrek worden spellen passend bedacht en ontworpen.</p>
+
+			<p>Doordat de inrichting van het museum geprojecteerd wordt, kan het gemakkelijk interactief gemaakt worden door bepaalde sensoren. Er kunnen dus ook spellen toegevoegd worden of door middel van ‘swipe’ bewegingen met de armen kan bijv. de inrichting aangepast worden of kan er gescrold worden door een galerij met foto’s en video’s.</p>
+
+			<p><b>TEKENEN/VISUALISATIE HOE HET CONCEPT TECHNISCH WERKT</b></p>
+			<p>De kamer bestaat uit vier witte muren en mogelijk een soort plafond. Omdat er in school niet veel ruimte is, is het het beste als de muren op wielen geplaats worden, zodat het museum snel verplaats kan worden en makkelijk in en uit elkaar gehaald kan worden. Door middel van ‘spatial augmented reality’ wordt er een kamer ingericht die ervoor zorgt dat de kamer eruitziet als een museum dat past bij het gekozen onderwerp van de studenten. Daarnaast zorgt de ‘spatial AR’ ervoor dat de activiteiten binnen het museum interactief zijn en continu verandert kunnen worden, als het nodig is.</p>
+			</p>
 	    </main>
 
 	    <main class="grid-item main1">
 	    	<h1>Onderzoek</h1>
-	    	<p></p>
+	    	<p>Indiase onderzoekers hebben een interactief urinoir gemaakt, die een animatie laat zijn terwijl de gebruiker plast en dus verlichting voelen bij het plassen. De animatie bootst na hoe een gebruiker verlichting voelt na het plassen. Hierdoor wordt een urinoir niet alleen functioneel maak ook playful. </p>
+
+			<p>Het doel van deze Playful Interface is het leuker maken van iets wat normaliter alleen functioneel is en ook saai is.</p>
+
+			<p>Door middel van sensoren op en in het porseleinen urinoir zitten in totaal 108 sensor pinnen die precies detecteren waar de plas het urinoir raakt. Eerst is er met een Illutrator afbeelding een map gemaakt van waar de sensoren zich moeten bevinden en vervolgens zijn deze sensoren geplaats.</p>
+
+			<p>Deze Playful Interface is duidelijk een individueel ‘spel’, daarnaast is het noch coöperatief noch competitief, omdat het een toevoeging van een animatie is en geen spel. Het is een onderling afhankelijk spel dus, en daarbij hoort alleen de functies ‘gedeelde object’ en ‘gedeelde ruimte’. 
+			</p>
+			<div id="playful-tech">
+				<img src="images/playful-poe.jpg" id="playful-img">
+
+				<iframe src="https://player.vimeo.com/video/81128543"  frameborder="0" allow="autoplay; fullscreen" allowfullscreen id="playful-vid"></iframe><!-- <p><a href="https://vimeo.com/81128543">POE - the playful Urinal</a> from <a href="https://vimeo.com/user9525404">Mani</a> on <a href="https://vimeo.com">Vimeo</a>.</p> -->
+			</div>
+			
+			<p>De video kan hier bekeken worden: <a href="https://www.designboom.com/design/the-playfully-interactive-poe-urinal-responds-with-animation-12-16-2013/">https://www.designboom.com/design/the-playfully-interactive-poe-urinal-responds-with-animation-12-16-2013/</a></p>
 	    </main>
 
 	    <main class="grid-item main2">
 	    	<h1>Reflectie</h1>
-	    	<p></p>
+	    	<p>Playful Interfaces maken gewone, dagelijkse dingen leuker en interessanter. Tijdens het hoorcollege zijn er veel leuke voorbeelden voorbijgekomen, waaruit gebleken is dat Playful Interfaces ervoor kunnen zorgen dat het gedrag van gebruikers positief beïnvloed kan worden. Playful Interfaces kunnen puur voor plezier gebruikt worden, maar zit er toch een psychologische gedachtegang achter. Zoals bij de ‘piano trap’, werd een trap bekleed met materiaal dat eruitzag als een piano en geluid maakte als iemand erop liep. Normaal is traplopen saai en normaal, maar door deze verandering gingen veel meer mensen de trap gebruiken en vonden ze het ook echt leuk. Dit is een goede positieve beïnvloeding van gebruikers. </p>
+
+	    	<p>Ik denk dat Playful Interfaces de toekomst heel erg kunnen veranderen, zoals bijv. bij het verbeteren van het milieu. Als normale handelingen als het weggooien van vuilnis en recyclen op een leuke manier kan gebeuren, zal iedereen hier veel meer zijn best voor gaan doen. Daarnaast kunnen Playful Interfaces leren veel leuker maken, zowel voor kinderen als voor volwassenen. Niet meer uit saaie boeken leren, maar door middel van speciale technieken theorie tot leven brengen en hierdoor meer en beter leren. </p>
+
+	    	<p>Het onderwerp Playful Interfaces is leuker dan ik van tevoren had verwacht, omdat er zo veel al mee gedaan is en nog kan komen. Het kan van iets heel kleins tot iets groots gebruikt worden en het leven net even iets leuker maken. </p>
+
 	    </main>
 
 	    <footer class="grid-item foot">
-	    	<p>© 2019 HCI by Djenna Bakker</p>
+	    	<p>© 2019 HCI by <a href="https://djennabakker.myportfolio.com/" target="_blank" id="link-footer">Djenna Bakker</a></p>
 	    </footer>
 
 	  <script type="text/javascript" src="scripts/script.js"></script>
