--- a/artificialcreatures.html
+++ b/artificialcreatures.html
@@ -35,22 +35,44 @@
 	    </nav>
 
 	    <main class="grid-item main">
-	    	<h1>Opdrachten</h1>
-	    	<p></p>
+	    	<h1>Introductie</h1>
+	    	<p>Artificial creatures zijn grof vertaald kunstmatige wezens. Hiermee worden apparaten met menselijke of dierlijke eigenschappen en emoties bevatten of zo neer worden gezet alsof ze echt gevoelens hebben. </p>
+	    	
+	    	<h1>Opdracht</h1>
+	    	<p>Voor deze opdracht heb ik het ‘Homeostatis model’ gebruikt. Dit is de balans is het ‘lichaam’, van zowel mensen, dieren en apparaten. Bij een mens is dit bijvoorbeeld honger hebben, lichaamstemperatuur en hormonen. Bij apparaten kunnen dat bijvoorbeeld elektriciteit, veiligheid en water zijn. Het zijn dus dingen die zorgen voor balans van binnen en hoe dit in balans blijft. </p>
+
+			<p>Ik heb ervoor gekozen om het homeostatis model toe te passen op de automatische schuifdeur. De schuifdeur heeft meerdere bazen, iemand die hem elke ochtend wakker maakt en iemand die ervoor zorgt dat hij in de avond kan gaan slapen. Maar overdag is de schuifdeur druk bezig, hij wacht de hele dag op zijn al zijn gebruikers en bedient ze met alle liefde. </p>
+
+			<p>De schuifdeur heeft geen geluid nodig om te weten wanneer hij open moet gaat, hij voelt dit zelf aan. Soms zitten gebruikers aan hem en dan is even in de war, want hij is bang dat er iets mis is. Gelukkig begrijpen genoeg gebruikers dat hij hen bedient en zij hem niet hoeven te helpen. Gelukkig heeft de schuifdeur haren tussen zijn deuren, anders zou hij steeds hard botsen met zichzelf. Door middel van zijn slimme hersenen weet de schuifdeur wanneer hij open en dicht moet gaan en zorgt hij ervoor dat niemand vast zit tussen zijn deuren.</p>
+
+			<p>Als de schuifdeur in de war is en een kleine storing heeft, kan hij snel weer gemaakt worden door de gebruikers. Zij schuiven zijn deuren weer uit elkaar en dan kan de schuifdeur weer rustig zijn werk doen. Soms werkt het ook om hem heel even te laten slapen, dan is alles weer helder in zijn hoofd en kan hij weer goed werken.</p>
+
+			<p>Ook worden de deuren van de schuifdeur vies, omdat mensen aan hem zitten. Dit vindt hij heel vervelend, maar gelukkig heeft hij lieve mensen om hem heen die ervoor zorgen dat hij weer spic en span eruitziet. 
+			</p>
 	    </main>
 
 	    <main class="grid-item main1">
 	    	<h1>Onderzoek</h1>
-	    	<p></p>
+	    	<p>Bij het onderwerp ‘Artificial Creatures’ kunnen heel veel voorbeelden gegeven worden. Er zijn heel veel apparaten gebouwd die heel erg op mensen of dieren lijken, maar van binnen eigenlijk een robot zijn. Een mooi voorbeeld hiervan is Spoon, de interactieve robot zijn omgeving nabootst. Spoon is een kunstmatig huisdier die reageert op emoties, bewegingen en aanrakingen. Het doel van Spoon is om de barrière tussen robots en mensen te verminderen door een schattige robot te maken, die hopelijk genoeg aandacht krijgt van mensen. Spoon volgt bijvoorbeeld jouw lach, laat zelf ook andere emoties zien en je kan hem aaien zoals een normaal huisdier, en ook hier reageert hij op. </p>
+	    	<p>Ik heb Spoon uitgekozen omdat Spoon er ten eerste heel schattig uit ziet en omdat ik de interactie ervan heel leuk vindt. Ik vind het super interessant dat een robot zoveel verschillende sensoren heeft, kan gebruiken en daarmee heel specifiek kan interacteren met mensen. Daarnaast heeft Spoon als doel niet om mensen te vervangen, maar om een toevoeging te zijn in het leven van mensen en de interactie tussen individuen te promoten. Dit vind ik persoonlijk een mooi doel voor de robot, omdat veel mensen bang zijn dat robots later de wereld overnemen en daarom een robot minder snel zien als een leuke toevoeging aan het leven. </p>
+	    	<p>Lees <a href="https://urwlab.com/robot-introducing-spoon-non-humanoid-emotions/">hier</a> meer over de robot Spoon. </p>
+	    	<div id="ac-media">
+	    		<iframe src="https://www.youtube.com/embed/rd_q98nzNf4" frameborder="0" allowfullscreen class="ac-video"></iframe>
+
+	    		<img src="images/spoon.png" class="ac-foto">
+	    		<img src="images/spoon.jpeg" class="ac-foto">
+	    		<img src="images/spoon1.jpeg" class="ac-foto">
+	    		<img src="images/spoony.jpeg" class="ac-foto">
+	    	</div>	    	
 	    </main>
 
 	    <main class="grid-item main2">
 	    	<h1>Reflectie</h1>
-	    	<p></p>
+	    	<p>Ik vind het onderwerp Artificial Creatures heel interessant en eigenlijk heel bijzonder. Ik vind het bizar wat voor wezens er gemaakt kunnen worden, met eigenschappen van mensen of dieren. Dat er robots gemaakt kunnen worden die bijna identiek op een mens lijken en doet en beweegt als een mens. Het maakt mij heel nieuwsgierig over de toekomst, zal het positief of negatief uitpakken? Dat Artificial Creatures gebruikt worden voor nuttige doeleinden vind ik vooral heel goed, dat door middel van de robots mensen geholpen kunnen worden op emotioneel en sociaal vlak.  </p>
 	    </main>
 
 	    <footer class="grid-item foot">
-	    	<p>© 2019 HCI by Djenna Bakker</p>
+	    	<p>© 2019 HCI by <a href="https://djennabakker.myportfolio.com/" target="_blank" id="link-footer">Djenna Bakker</a></p>
 	    </footer>
 
 	  <script type="text/javascript" src="scripts/script.js"></script>
