--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
 			-->
 	    </main>
 
+	    <main class="grid-item main1" id="main1-index">
+	    </main>
+
+	    <main class="grid-item main2" id="main2-index">
+	    </main>
+
 	    <footer class="grid-item foot">
 	    	<p>© 2019 HCI by <a href="https://djennabakker.myportfolio.com/" target="_blank" id="link-footer">Djenna Bakker</a></p>
 	    </footer>
