--- a/artificialcreatures.html
+++ b/artificialcreatures.html
@@ -35,10 +35,11 @@
 	    </nav>
 
 	    <main class="grid-item main">
-	    	<h1>Introductie</h1>
+	    	<h1>Opdracht</h1>
+	    	<h3>Introductie</h3>
 	    	<p>Artificial creatures zijn grof vertaald kunstmatige wezens. Hiermee worden apparaten met menselijke of dierlijke eigenschappen en emoties bevatten of zo neer worden gezet alsof ze echt gevoelens hebben. </p>
 	    	
-	    	<h1>Opdracht</h1>
+	    	<h3>Concept</h3>
 	    	<p>Voor deze opdracht heb ik het ‘Homeostatis model’ gebruikt. Dit is de balans is het ‘lichaam’, van zowel mensen, dieren en apparaten. Bij een mens is dit bijvoorbeeld honger hebben, lichaamstemperatuur en hormonen. Bij apparaten kunnen dat bijvoorbeeld elektriciteit, veiligheid en water zijn. Het zijn dus dingen die zorgen voor balans van binnen en hoe dit in balans blijft. </p>
 
 			<p>Ik heb ervoor gekozen om het homeostatis model toe te passen op de automatische schuifdeur. De schuifdeur heeft meerdere bazen, iemand die hem elke ochtend wakker maakt en iemand die ervoor zorgt dat hij in de avond kan gaan slapen. Maar overdag is de schuifdeur druk bezig, hij wacht de hele dag op zijn al zijn gebruikers en bedient ze met alle liefde. </p>
@@ -55,7 +56,7 @@
 	    	<h1>Onderzoek</h1>
 	    	<p>Bij het onderwerp ‘Artificial Creatures’ kunnen heel veel voorbeelden gegeven worden. Er zijn heel veel apparaten gebouwd die heel erg op mensen of dieren lijken, maar van binnen eigenlijk een robot zijn. Een mooi voorbeeld hiervan is Spoon, de interactieve robot zijn omgeving nabootst. Spoon is een kunstmatig huisdier die reageert op emoties, bewegingen en aanrakingen. Het doel van Spoon is om de barrière tussen robots en mensen te verminderen door een schattige robot te maken, die hopelijk genoeg aandacht krijgt van mensen. Spoon volgt bijvoorbeeld jouw lach, laat zelf ook andere emoties zien en je kan hem aaien zoals een normaal huisdier, en ook hier reageert hij op. </p>
 	    	<p>Ik heb Spoon uitgekozen omdat Spoon er ten eerste heel schattig uit ziet en omdat ik de interactie ervan heel leuk vindt. Ik vind het super interessant dat een robot zoveel verschillende sensoren heeft, kan gebruiken en daarmee heel specifiek kan interacteren met mensen. Daarnaast heeft Spoon als doel niet om mensen te vervangen, maar om een toevoeging te zijn in het leven van mensen en de interactie tussen individuen te promoten. Dit vind ik persoonlijk een mooi doel voor de robot, omdat veel mensen bang zijn dat robots later de wereld overnemen en daarom een robot minder snel zien als een leuke toevoeging aan het leven. </p>
-	    	<p>Lees <a href="https://urwlab.com/robot-introducing-spoon-non-humanoid-emotions/">hier</a> meer over de robot Spoon. </p>
+	    	<p>Lees <a href="https://urwlab.com/robot-introducing-spoon-non-humanoid-emotions/" target="_blank">hier</a> meer over de robot Spoon. </p>
 	    	<div id="ac-media">
 	    		<iframe src="https://www.youtube.com/embed/rd_q98nzNf4" frameborder="0" allowfullscreen class="ac-video"></iframe>
 
