--- a/excursion.html
+++ b/excursion.html
@@ -40,7 +40,7 @@
 	    </main>
 
 	    <main class="grid-item main1">
-	    	<h1>Reflect</h1>
+	    	<h1>Reflectie</h1>
 	    	<p></p>
 	    </main>
 
