--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</ul>
 	    </nav>
 	    
-	    <main class="grid-item main" id="home">
+	    <main class="grid-item main">
 	    	<h1>Welkom!</h1>
 	    	<img src="images/djenna.png" class="djenna-foto" alt="foto-djenna">
 	    	<p>
