--- a/playfulinteractions.html
+++ b/playfulinteractions.html
@@ -69,7 +69,7 @@
 				<iframe src="https://player.vimeo.com/video/81128543"  frameborder="0" allow="autoplay; fullscreen" allowfullscreen id="playful-vid"></iframe><!-- <p><a href="https://vimeo.com/81128543">POE - the playful Urinal</a> from <a href="https://vimeo.com/user9525404">Mani</a> on <a href="https://vimeo.com">Vimeo</a>.</p> -->
 			</div>
 			
-			<p>De video kan hier bekeken worden: <a href="https://www.designboom.com/design/the-playfully-interactive-poe-urinal-responds-with-animation-12-16-2013/">https://www.designboom.com/design/the-playfully-interactive-poe-urinal-responds-with-animation-12-16-2013/</a></p>
+			<p>De video kan hier bekeken worden: <a href="https://www.designboom.com/design/the-playfully-interactive-poe-urinal-responds-with-animation-12-16-2013/" target="_blank">https://www.designboom.com/design/the-playfully-interactive-poe-urinal-responds-with-animation-12-16-2013/</a></p>
 	    </main>
 
 	    <main class="grid-item main2">
