--- a/ar-vr.html
+++ b/ar-vr.html
@@ -41,15 +41,33 @@
 
 	    	<h3>Concepten</h3>
 	    	<p>Voor de opdracht van AR & VR bedenk ik een concept bij elk van de drie onderwerpen die ik gekozen heb. De onderwerpen zijn hieronder terug te vinden, samen met het concept, de werking ervan en een passende illustratie. </p>
-	    	<p></p>
-	    	<p></p>
-	    	<p></p>
-	    	<p></p>
+	    	<p><i>1. Education and/or research</i></p>
+	    	<p>Door mijn ervaring in de kinderopvang, waar ik 2 jaar gewerkt heb, merkte ik al snel dat kinderen in hokjes geduwd worden als het gaat om creativiteit. Docenten willen graag dat kinderen leren wat in de boeken staat en creativiteit staat op een veel lager pitje. Ik denk hier heel anders over en ik vind dat je van jongs af aan al moet zoeken naar de krachten van kinderen en ze veel ruimte moet geven in creativiteit en eigen voorkeuren. De kinderen worden dan regelmatig verteld dat dingen die zij tekenen en bedenken niet echt zijn en nooit echt zullen zijn. Deze benadering vind ik erg negatief, want kinderen worden hierdoor geremd in hun vermogen om te fantaseren en daarvan te genieten. Wat nou als de tekeningen van kinderen omgezet kunnen worden tot ‘echte’ dieren bijvoorbeeld, door middel van VR. Kinderen kunnen op deze manier ervaren wat er met hun ideeën en creaties kan gebeuren en zullen alleen maar creatiever worden, i.p.v. naar beneden worden gehaald omdat dingen ‘onmogelijk’ zijn. </p>
+	    	<p><i>2. (Anxiety) therapy</i></p>
+	    	<p>Het doel van therapie is op zoek gaan naar de kern van het probleem, trauma, etc. en vanuit daar de verwerking optimaal te laten lopen, zodat de patiënt minder problemen ervaart en leert om te gaan met zijn angsten. Een goed middel om iets te verwerken is door de situatie na te spelen en daarin de problemen op te zoeken. Dit kan heel heftig zijn voor een patiënt, maar zo weet een therapeut erachter komen wat er gebeurd is, hoe de patiënt zich voelde en hoe het probleem of trauma ontstaan is. Met een computerprogramma kan de situatie geschetst worden met behulp van het verhaal van de patiënt, vervolgens kan de situatie geprojecteerd worden door middel van ruimtelijke-AR. De kamer van de therapeut heeft dan een of meerdere witte muren en hier kan een deel van een kamer geprojecteerd worden. </p>
+	    	<p><i>3. Car technology</i></p>
+	    	<p>In auto’s zitten tegenwoordig al een aan camera’s die helpen bij parkeren en die zelfs functioneren als spiegels. Maar wat nou als deze camera’s een opnamen maakt tijdens het rijden zelf. Als er dan een ongeluk plaats vindt, hebben de camera’s dit opgenomen en kan hierdoor precies gekeken worden wat er gebeurd is. Daarnaast kan er een AR-projectie van gemaakt worden die de hele situatie afbeeldt, zodat de situatie volledig bekeken kan worden. Op deze manier hoeft het onderzoeksteam niet te gokken wat er gebeurd is, als er bijvoorbeeld geen ooggetuigen bij aanwezig waren die een verklaring kunnen afleggen. Zo kunnen ook gevaarlijke situatie in beeld gebracht worden en kunnen de wegen veiliger gemaakt worden.</p>
 	    </main>
 
 	    <main class="grid-item main1">
 	    	<h1>Onderzoek</h1>
-	    	<p></p>
+	    	<p>Er is niets stressvoller dan op een onbekend vliegveld zijn, de weg niet weten en snel naar de gate toe moeten. Nu heeft Gatwick Airport de applicatie ‘wayfinder’ ontwikkeld, waarmee reizigers een bestemming kiezen en daar de route bij krijgen. Op deze manier hoeven de reizigers alleen maar de route op hun telefoon te volgen en hoeven zij niet op alle borden te zoeken, personeel om hulp vragen of verdwaald te raken. Ik vind dat ze deze functie op elk vliegveld moeten toepassen, want dit maakt het reizen veel makkelijker en minder stressvol. Naast Gatwick Airport hebben meerdere vliegvelden deze functie of een vorm ervaar toegevoegd aan hun vliegveld. Van Gatwick is helaas geen video te vinden, maar de foto’s zijn hieronder terug te vinden. Wel heb ik een paar video’s gevonden van andere vliegvelden met een soortgelijk concept. </p>
+	    	<div id="ar-tech">
+	    		<p><b>Gatwick Airport</b></p>
+	    		<p><a href="https://park-it-solutions.com/augmented-reality-airports/">https://park-it-solutions.com/augmented-reality-airports/</a></p>
+	    		<img src="images/ar-airport.jpg" id="ar-img">
+	    		<img src="images/ar-gatwick.jpg" id="ar-img">
+
+	    		<p><b>Heathrow Airport</b></p>
+	    		<p><a href="https://www.youtube.com/watch?v=onyefgD6kuA">https://www.youtube.com/watch?v=onyefgD6kuA</a></p>
+	    		<iframe src="https://www.youtube.com/embed/onyefgD6kuA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen id="ar-vid"></iframe> 
+	    		
+
+	    		<p><b>American Airlines</b></p>
+	    		<p><a href="https://www.youtube.com/watch?v=zohRwHzu9gA ">https://www.youtube.com/watch?v=zohRwHzu9gA </a></p>
+	    		<iframe src="https://www.youtube.com/embed/zohRwHzu9gA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen id="ar-vid"></iframe>
+	    		
+	    	</div>
 	    </main>
 
 	    <main class="grid-item main2">
