--- a/ar-vr.html
+++ b/ar-vr.html
@@ -55,24 +55,29 @@
 	    	<div id="ar-tech">
 	    		<p><b>Gatwick Airport</b></p>
 	    		<p><a href="https://park-it-solutions.com/augmented-reality-airports/">https://park-it-solutions.com/augmented-reality-airports/</a></p>
-	    		<img src="images/ar-airport.jpg" id="ar-img">
-	    		<img src="images/ar-gatwick.jpg" id="ar-img">
+	    		<img src="images/ar-airport.jpg" class="ar-img">
+	    		<img src="images/ar-gatwick.jpg" class="ar-img">
 
 	    		<p><b>Heathrow Airport</b></p>
 	    		<p><a href="https://www.youtube.com/watch?v=onyefgD6kuA">https://www.youtube.com/watch?v=onyefgD6kuA</a></p>
-	    		<iframe src="https://www.youtube.com/embed/onyefgD6kuA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen id="ar-vid"></iframe> 
+	    		<iframe src="https://www.youtube.com/embed/onyefgD6kuA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="ar-vid"></iframe> 
 	    		
 
 	    		<p><b>American Airlines</b></p>
 	    		<p><a href="https://www.youtube.com/watch?v=zohRwHzu9gA ">https://www.youtube.com/watch?v=zohRwHzu9gA </a></p>
-	    		<iframe src="https://www.youtube.com/embed/zohRwHzu9gA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen id="ar-vid"></iframe>
+	    		<iframe src="https://www.youtube.com/embed/zohRwHzu9gA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="ar-vid"></iframe>
 	    		
 	    	</div>
 	    </main>
 
 	    <main class="grid-item main2">
 	    	<h1>Reflectie</h1>
-	    	<p></p>
+	    	<p>Ik vind de onderwerpen VR & AR heel interessant, omdat er zo veel verschillende dingen mee gemaakt kunnen worden. Beide onderwerpen kunnen gebruikt worden voor zowel plezier als educatie, en hierdoor kan eigenlijk alles wel met VR & AR gemaakt worden. Ik vind het vooral goed dat VR gebruikt wordt in scholen, zodat theorie echt tot leven komt en kinderen hier interactie met kunnen hebben. Ik denk dat deze techniek steeds verder ontwikkeld gaat worden en over een paar jaar niet meer uit de schoolwereld te denken is.</p>
+	    </main>
+
+	    <main class=" grid-item main3">
+	    	<h1>Unreal Engine</h1>
+	    	<p>Tijdens een van mijn workshops heb ik gewerkt met het programma 'Unreal Engine'. In dit programma </p>
 	    </main>
 
 	    <footer class="grid-item foot">
