--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 		<link type="text/css" href="styles/style.css" rel="stylesheet" />
 
-		<title>Portfolio</title>
+		<title>HCI-Portfolio</title>
 	</head>
 	<body>
 	  	<header class="grid-item header">
